# Ann_leasing-website

./: .eslintrc.js  .gitignore  .prettierignore  README.md  cypress.config.js  deployed_bundle.js  deployed_index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.js
insta485/: model.py
insta485/api/: __init__.py  comments.py  likes.py  posts.py  service_api.py
insta485/js/: post.jsx
insta485/templates/: create.html  delete.html  edit.html  explore.html  following.html  home.html  index.html  login.html  my_posts.html  password.html  post.html  post1.html  post_lease.html  rent.html  rent_home.html  starred_posts.html  user.html
insta485/views/: __init__.py  accounts.py  comments.py  index.py  posts.py  rent.py  users.py
leaseAnn/: __init__.py  config.py  model.py
leaseAnn/api/: __init__.py  comments.py  likes.py  posts.py  service_api.py
leaseAnn/js/: main.jsx
leaseAnn/templates/: followers.html  index.html  login.html  my_posts.html  post1star.html  post2.html  post_lease.html  starred_posts.html
leaseAnn/views/: __init__.py  accounts.py  explore.py  likes.py
sql/: data.sql  schema.sql
tests/: conftest.py  test_rest_api_likes_and_comments.py  test_rest_api_posts.py  test_rest_api_simple.py  test_scripts.py  test_style.py  utils.py
tests/cypress/e2e/: test_index_public.cy.js  test_scroll_public.cy.js  test_slow_server_index_public.cy.js
tests/cypress/fixtures/: posts_page_0.json  posts_page_0_new_posts.json  posts_page_1.json  posts_page_2.json
var/: insta485.sqlite3
(+34 files in other folders)
