[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta485"
version = "1.0.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "html5validator",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["insta485"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]

[tool.pytest.ini_options]
pythonpath = [
"."
]
